net: sched: e2e_cache: Introduce e2e_cache module
Issue: 2304568
Change-Id: I095036861f6fceadbac5441d41629d013824cea8
Signed-off-by: Oz Shlomo <ozsh@nvidia.com>
Reviewed-by: Paul Blakey <paulb@nvidia.com>

--- a/net/sched/Kconfig
+++ b/net/sched/Kconfig
@@ -716,6 +716,14 @@ config NET_EMATCH_IPT
 	  To compile this code as a module, choose M here: the
 	  module will be called em_ipt.
 
+config NET_CLS_E2E_CACHE
+	tristate "End-to-end cache"
+	depends on NET_CLS_ACT
+        help
+          Say Y here if you want to use traffic control end-2-end cache.
+          End-2-end cache accelerates classification of multi-table rules
+          by merging them to a single rule.
+
 config NET_CLS_ACT
 	bool "Actions"
 	select NET_CLS
